manifests/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage-auth  # Cambia si usas otro namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing  # o internal para privado
    alb.ingress.kubernetes.io/target-type: ip  # Recomendado para Fargate o pods directos
    # Opcional: HTTPS con certificado ACM (reemplaza con tu ARN)
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:226633502530:certificate/e5d7f59f-deca-414b-a09a-2c96382cb6b6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
    - host: apps.pocarqnube.com  # Tu dominio (apunta el DNS a el ALB que se crea)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage-auth  # Nombre de tu Service (o backstage-backend si es separado)
                port:
                  number: 7007  # Puerto donde expone Backstage (normalmente 7007 backend, pero si unificado 80/7007)
